--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.370">
+        app:layout_constraintVertical_bias="0.340">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -98,13 +98,13 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="306dp"
-        android:layout_height="175dp"
+        android:layout_height="250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.700">
+        app:layout_constraintVertical_bias="0.760">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -123,11 +123,22 @@
                 android:text=" Connection to find"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
+            <CheckBox
+                android:id="@+id/isdj"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+
+                android:layout_below="@id/wart"
+                android:text="Dijkstra" />
+
             <EditText
                 android:id="@+id/editTextNumberDecimal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/wart"
+                android:layout_below="@id/isdj"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
